update: update minimal
