# backend/pkg/dtos/requestdto/web_hooks_reqeust.go
@@ -1,0 +1,9 @@
+package requestdto
+
+
+
+type WebHooksRequest struct{
+	OrganizationID uint `json:"organizationId" validate:"required"`
+	Message        string `json:"message" validate:"required,min=1,max=5000"`
+	Email    string `json:"email" validate:"required,email"`
+}
